@@ -34,15 +34,15 @@ xwd_SOURCES =	\
         wsutils.h \
         xwd.c
 
-appman_SOURCES = \
+appman_PRE = \
         xwd.man
 
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
